Adding answer to one question

--- a/Part+1+Swain+Assignment.ipynb
+++ b/Part+1+Swain+Assignment.ipynb
@@ -249,6 +249,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setting the lower bound of glucose exchange to 0 effectively turns off glucose import into the system. This is becaus negative flux through the exchange reaction is eqivalent to influx of gluclose into the cell."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 87,
    "metadata": {
