--- a/Part+1+Swain+Assignment.ipynb
+++ b/Part+1+Swain+Assignment.ipynb
@@ -1,20 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### Import required packages and load model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import cobra\n",
@@ -32,173 +28,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next two cells demonstrate useful tools to look at specific metabolites and reactions."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <table>\n",
-       "            <tr>\n",
-       "                <td><strong>Metabolite identifier</strong></td><td>glc__D_e</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Name</strong></td><td>D-Glucose</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x0113b03f98</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Formula</strong></td><td>C6H12O6</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Compartment</strong></td><td>e</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>In 2 reaction(s)</strong></td><td>\n",
-       "                    EX_glc__D_e, GLCpts</td>\n",
-       "            </tr>\n",
-       "        </table>"
-      ],
-      "text/plain": [
-       "\n",
-       "        <table>\n",
-       "            <tr>\n",
-       "                <td><strong>Metabolite identifier</strong></td><td>glc__D_e</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Name</strong></td><td>D-Glucose</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x0113b03f98</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Formula</strong></td><td>C6H12O6</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Compartment</strong></td><td>e</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>In 2 reaction(s)</strong></td><td>\n",
-       "                    EX_glc__D_e, GLCpts</td>\n",
-       "            </tr>\n",
-       "        </table>"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# To look at a specific metabolite (ID, name, chemical formula, reactions)\n",
-    "model.metabolites.get_by_id(\"glc__D_e\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <table>\n",
-       "            <tr>\n",
-       "                <td><strong>Reaction identifier</strong></td><td>EX_glc__D_e</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Name</strong></td><td>D-Glucose exchange</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x0113228630</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Stoichiometry</strong></td>\n",
-       "                <td>\n",
-       "                    <p style='text-align:right'>glc__D_e <=> </p>\n",
-       "                    <p style='text-align:right'>D-Glucose <=> </p>\n",
-       "                </td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>GPR</strong></td><td></td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Lower bound</strong></td><td>-10.0</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Upper bound</strong></td><td>1000.0</td>\n",
-       "            </tr>\n",
-       "        </table>\n",
-       "        "
-      ],
-      "text/plain": [
-       "\n",
-       "        <table>\n",
-       "            <tr>\n",
-       "                <td><strong>Reaction identifier</strong></td><td>EX_glc__D_e</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Name</strong></td><td>D-Glucose exchange</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x0113228630</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Stoichiometry</strong></td>\n",
-       "                <td>\n",
-       "                    <p style='text-align:right'>glc__D_e <=> </p>\n",
-       "                    <p style='text-align:right'>D-Glucose <=> </p>\n",
-       "                </td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>GPR</strong></td><td></td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Lower bound</strong></td><td>-10.0</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Upper bound</strong></td><td>1000.0</td>\n",
-       "            </tr>\n",
-       "        </table>\n",
-       "        "
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# To look at a specific reaction (ID, Name, stoichiometry, bounds)\n",
-    "model.reactions.get_by_id(\"EX_glc__D_e\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Going through the cells in this notebook, compete the set of perturbations and answer the questions. You can find examples for similar problems at this site: http://cobrapy.readthedocs.io/en/latest/getting_started.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Optimize the model. What is the biomass accumulation rate?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Biomass Accumulation Rate 0.917\nIN FLUXES        OUT FLUXES    OBJECTIVES\n---------------  ------------  ----------------------\no2_e      19.9   h2o_e  27.7   BIOMASS_Ecol...  0.917\nglc__D_e  10     co2_e  21\nnh4_e      5     h_e    18.4\npi_e       3.37\n"
+      "Biomass Accumulation Rate 0.917\n",
+      "\n",
+      "IN FLUXES        OUT FLUXES    OBJECTIVES\n",
+      "---------------  ------------  ----------------------\n",
+      "o2_e      19.9   h2o_e  27.7   BIOMASS_Ecol...  0.917\n",
+      "glc__D_e  10     co2_e  21\n",
+      "nh4_e      5     h_e    18.4\n",
+      "pi_e       3.37\n"
      ]
     }
    ],
    "source": [
     "solution = model.optimize()\n",
-    "print(\"Biomass Accumulation Rate {:.3f}\".format(solution.objective_value))\n",
+    "print(\"Biomass Accumulation Rate {:.3f}\\n\".format(solution.objective_value))\n",
     "model.summary()"
    ]
   },
@@ -211,16 +66,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reaction: ID - 'EX_glc__D_e',  NAME - 'D-Glucose exchange', REACTION - glc__D_e <=> \nCurrent Lower Bound: -10.000\nNew Lower Bound: -20.000\nBiomass Accumulation Rate 1.833\nIN FLUXES        OUT FLUXES    OBJECTIVES\n---------------  ------------  ---------------------\no2_e      39.9   h2o_e  55.3   BIOMASS_Ecol...  1.83\nglc__D_e  20     co2_e  42\nnh4_e     10     h_e    36.8\npi_e       6.74\n"
+      "Reaction: ID - 'EX_glc__D_e',  NAME - 'D-Glucose exchange', REACTION - glc__D_e <=> \n",
+      "Current Lower Bound: -10.000\n",
+      "New Lower Bound: -20.000\n",
+      "\n",
+      "Biomass Accumulation Rate 1.833\n",
+      "\n",
+      "IN FLUXES        OUT FLUXES    OBJECTIVES\n",
+      "---------------  ------------  ---------------------\n",
+      "o2_e      39.9   h2o_e  55.3   BIOMASS_Ecol...  1.83\n",
+      "glc__D_e  20     co2_e  42\n",
+      "nh4_e     10     h_e    36.8\n",
+      "pi_e       6.74\n"
      ]
     }
    ],
@@ -234,10 +98,10 @@
     "        print(\"Current Lower Bound: {:.3f}\".format(r.lower_bound))\n",
     "        r.lower_bound = -20\n",
     "        glu_ex_id = r.id\n",
-    "        print(\"New Lower Bound: {:.3f}\".format(r.lower_bound))\n",
+    "        print(\"New Lower Bound: {:.3f}\\n\".format(r.lower_bound))\n",
     "        \n",
     "solution = model.optimize()\n",
-    "print(\"Biomass Accumulation Rate {:.3f}\".format(solution.objective_value))\n",
+    "print(\"Biomass Accumulation Rate {:.3f}\\n\".format(solution.objective_value))\n",
     "model.summary()"
    ]
   },
@@ -257,16 +121,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Biomass Accumulation Rate 0.000\nIN FLUXES    OUT FLUXES    OBJECTIVES\n-----------  ------------  ------------------\n                           BIOMASS_Ecol...  0\n"
+      "Biomass Accumulation Rate 0.000\n",
+      "\n",
+      "IN FLUXES    OUT FLUXES    OBJECTIVES\n",
+      "-----------  ------------  ------------------\n",
+      "                           BIOMASS_Ecol...  0\n"
      ]
     }
    ],
@@ -274,7 +140,7 @@
     "r = model.reactions.get_by_id(glu_ex_id)\n",
     "r.lower_bound = 0\n",
     "solution = model.optimize()\n",
-    "print(\"Biomass Accumulation Rate {:.3f}\".format(solution.objective_value))\n",
+    "print(\"Biomass Accumulation Rate {:.3f}\\n\".format(solution.objective_value))\n",
     "model.summary()"
    ]
   },
@@ -303,16 +169,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reaction:\n\tID - 'GLCpts',\n\tNAME - 'D-glucose transport via PEP:Pyr PTS',\n\tREACTION - glc__D_e + pep_c --> g6p_c + pyr_c\nBiomass Accumulation Rate 0.000\n"
+      "Reaction:\n",
+      "\tID - 'GLCpts',\n",
+      "\tNAME - 'D-glucose transport via PEP:Pyr PTS',\n",
+      "\tREACTION - glc__D_e + pep_c --> g6p_c + pyr_c\n",
+      "\n",
+      "Biomass Accumulation Rate 0.000\n"
      ]
     }
    ],
@@ -321,23 +190,24 @@
     "model = cobra.io.read_sbml_model(\"420_model.xml\")\n",
     "r = model.reactions.get_by_id(\"GLCpts\")\n",
     "r.knock_out()\n",
-    "print(\"Reaction:\\n\\tID - \\'{}\\',\\n\\tNAME - \\'{}\\',\\n\\tREACTION - {}\".format(r.id, \n",
-    "                                                                    r.name,\n",
-    "                                                                    r.reaction))\n",
+    "print(\"Reaction:\\n\\tID - \\'{}\\',\\n\\tNAME - \\'{}\\',\\n\\tREACTION - {}\\n\".format(r.id, \n",
+    "                                                                              r.name,\n",
+    "                                                                              r.reaction))\n",
     "solution = model.optimize()\n",
     "print(\"Biomass Accumulation Rate {:.3f}\".format(solution.objective_value))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "D-Glucose exchange : glc__D_e <=> \nD-glucose transport via PEP:Pyr PTS : glc__D_e + pep_c --> g6p_c + pyr_c\n"
+      "D-Glucose exchange : glc__D_e <=> \n",
+      "D-glucose transport via PEP:Pyr PTS : glc__D_e + pep_c --> g6p_c + pyr_c\n"
      ]
     }
    ],
